# code-first-capnp

./: Cargo.toml  README.md
capnp-model/: Cargo.toml
capnp-model/src/: lib.rs
code-first-capnp/: Cargo.toml
code-first-capnp-macros/: Cargo.toml
code-first-capnp-macros/src/: lib.rs
code-first-capnp/src/: lib.rs
examples/: demo.rs
examples/demo/: Cargo.toml  demo.capnp
examples/demo-run/: Cargo.toml  README.md  build.rs
examples/demo-run/src/: lib.rs  main.rs
examples/demo-types/: Cargo.toml  README.md
examples/demo-types/src/: lib.rs  main.rs
examples/demo/src/: lib.rs  main.rs
src/: capnp_model.rs  lib.rs
