[workspace]
resolver = "3"
members = [
    "code-first-capnp",
    "code-first-capnp-macros",
    "examples/demo-types",
    "examples/demo-run",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
heck = "0.5"
capnp = "0.21"
capnpc = "0.21"
code-first-capnp-macros = { path = "code-first-capnp-macros" }
proc-macro-crate = "3.0"
